--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/edit_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditActivity">
@@ -46,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:gravity="center_vertical|end"
+                android:onClick="onSave"
                 android:paddingTop="12dp"
                 android:text="Save"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -81,12 +83,14 @@
                 android:paddingBottom="8dp">
 
                 <EditText
-                    android:id="@+id/editText"
+                    android:id="@+id/edit_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="textPersonName"
+                    android:selectAllOnFocus="true"
+                    android:singleLine="true"
                     android:text="Title" />
             </android.support.v7.widget.CardView>
 
@@ -151,5 +155,17 @@
                 android:textColor="?attr/colorAccent" />
         </LinearLayout>
     </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/edit_pb"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
