--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
+                android:onClick="onBack"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -88,10 +89,10 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:gravity="center"
+                    android:hint="@string/edit_title"
                     android:inputType="textPersonName"
                     android:selectAllOnFocus="true"
-                    android:singleLine="true"
-                    android:text="Title" />
+                    android:singleLine="true" />
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
