--- a/app/src/main/res/layout/fragment_object.xml
+++ b/app/src/main/res/layout/fragment_object.xml
@@ -31,14 +31,12 @@
     <TextView
         android:id="@+id/main_item_meta"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:text="228 Images"
         android:textAppearance="@android:style/TextAppearance.Material.Subhead"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/main_item_lastact"
         app:layout_constraintStart_toEndOf="@+id/main_item_thumb"
         app:layout_constraintTop_toBottomOf="@+id/main_item_title" />
