--- a/app/src/main/res/layout/fragment_query.xml
+++ b/app/src/main/res/layout/fragment_query.xml
@@ -53,7 +53,8 @@
             android:elevation="0dp"
             android:foreground="?attr/selectableItemBackgroundBorderless"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:focusable="true" />
 
     </android.support.constraint.ConstraintLayout>
 
