>UI enhancements >Fix incorrect data comparision in ArtifactObject

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
         android:layout_marginBottom="8dp"
         android:clickable="true"
         android:onClick="onClickGuess"
+        android:visibility="gone"
         app:fabSize="normal"
         app:layout_constraintBottom_toTopOf="@+id/main_add"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +80,7 @@
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:onClick="onClickAdd"
+        android:visibility="visible"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
