--- a/app/src/main/res/layout/fragment_object.xml
+++ b/app/src/main/res/layout/fragment_object.xml
@@ -27,20 +27,20 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Object Title"
+        android:textAlignment="textStart"
         android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Title"
         app:layout_constraintStart_toEndOf="@+id/main_item_thumb"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/main_item_meta"
-        android:layout_width="0dp"
+        android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
-        android:layout_marginEnd="8dp"
         android:text="228 Images"
+        android:textAlignment="textStart"
         android:textAppearance="@android:style/TextAppearance.Material.Subhead"
-        app:layout_constraintEnd_toStartOf="@+id/main_item_lastact"
         app:layout_constraintStart_toEndOf="@+id/main_item_thumb"
         app:layout_constraintTop_toBottomOf="@+id/main_item_title" />
 
@@ -51,18 +51,22 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Ready to Learn"
+        android:textAlignment="textEnd"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/main_item_lastact"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:text="Edited 22:28"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/main_item_meta"
         app:layout_constraintTop_toBottomOf="@+id/main_item_status" />
 
     <View
