--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/edit_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditActivity">
@@ -18,12 +17,11 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/edit_activityTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="4dp"
-                android:text="Edit Object"
+                android:text="@string/edit_bartitle"
                 android:textAppearance="@android:style/TextAppearance.Material.Title"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/edit_back"
@@ -39,10 +37,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="?attr/actionModeCloseDrawable" />
+                app:srcCompat="?attr/actionModeCloseDrawable"
+                android:contentDescription="@string/back" />
 
             <Button
-                android:id="@+id/button"
                 style="@android:style/Widget.Material.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,7 +48,7 @@
                 android:gravity="center_vertical|end"
                 android:onClick="onSave"
                 android:paddingTop="12dp"
-                android:text="Save"
+                android:text="@string/edit_savebutt"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -92,7 +90,9 @@
                     android:hint="@string/edit_title"
                     android:inputType="textPersonName"
                     android:selectAllOnFocus="true"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:importantForAutofill="no"
+                    tools:targetApi="o" />
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
@@ -113,7 +113,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
-                        android:text="Upload Images"
+                        android:text="@string/edit_upload"
                         android:textAppearance="@android:style/TextAppearance.Material.Body1"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -135,10 +135,10 @@
                             android:orientation="horizontal">
 
                             <ImageButton
-                                android:id="@+id/edit_newupl"
                                 android:layout_width="60dp"
                                 android:layout_height="60dp"
-                                app:srcCompat="@android:drawable/ic_menu_add" />
+                                app:srcCompat="@android:drawable/ic_menu_add"
+                                android:contentDescription="@string/edit_addcust" />
                         </LinearLayout>
                     </HorizontalScrollView>
 
@@ -147,12 +147,11 @@
             </android.support.v7.widget.CardView>
 
             <Button
-                android:id="@+id/edit_addq"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onClickAddQ"
-                android:text="Add Query"
+                android:text="@string/edit_addq"
                 android:textColor="?attr/colorAccent" />
         </LinearLayout>
     </ScrollView>
