--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,8 @@
                 app:layout_constraintStart_toEndOf="@+id/main_title"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.57"
-                app:srcCompat="@android:drawable/presence_invisible" />
+                app:srcCompat="@android:drawable/presence_invisible"
+                android:contentDescription="@string/main_svst" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -59,21 +60,19 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/main_guess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="73dp"
         android:clickable="true"
         android:onClick="onClickGuess"
         android:visibility="gone"
         app:fabSize="normal"
-        app:layout_constraintBottom_toTopOf="@+id/main_add"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_view" />
+        app:srcCompat="@drawable/baseline_add_black_48"
+        android:focusable="true" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/main_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -84,7 +83,8 @@
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@drawable/baseline_add_white_48"
+        android:focusable="true" />
 
     <ProgressBar
         android:id="@+id/main_pb"
