--- a/app/src/main/res/layout/dialog_objectpropts.xml
+++ b/app/src/main/res/layout/dialog_objectpropts.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:background="?android:attr/detailsElementBackground"
+    android:padding="16dp"
+    tools:ignore="Overdraw">
 
     <TextView
         android:id="@+id/objpts_title"
@@ -16,7 +18,8 @@
         android:textAppearance="@android:style/TextAppearance.Material.Title"
         app:layout_constraintEnd_toStartOf="@+id/objpts_switch"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
     <Switch
         android:id="@+id/objpts_switch"
@@ -30,7 +33,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="@string/main_op_status"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
         android:textSize="14sp"
@@ -42,18 +45,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
         android:text="Ready, Up-to-date"
         android:textAppearance="@android:style/TextAppearance.Material.Body2"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/objpts_title" />
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:text="@string/main_op_queries"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
         android:textSize="14sp"
@@ -65,18 +68,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
         android:text="4"
         android:textAppearance="@android:style/TextAppearance.Material.Body2"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/objpts_status" />
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:text="@string/main_op_total"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,17 +90,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
         android:text="@string/main_op_unknown"
         android:textAppearance="@android:style/TextAppearance.Material.Body2"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/objpts_queries" />
+        app:layout_constraintTop_toTopOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:text="@string/main_op_created"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,17 +110,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
         android:text="14 aug. 1939"
         android:textAppearance="@android:style/TextAppearance.Material.Body2"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/objpts_total" />
+        app:layout_constraintTop_toTopOf="@+id/textView8"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:text="@string/main_op_learned"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,21 +131,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
         android:text="---"
         android:textAppearance="@android:style/TextAppearance.Material.Body2"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/objpts_created" />
+        app:layout_constraintTop_toTopOf="@+id/textView10"
+        tools:ignore="HardcodedText" />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/objpts_learned" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/objpts_btnlay_edit"
@@ -153,6 +155,7 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider2">
 
@@ -163,7 +166,8 @@
             app:layout_constraintEnd_toStartOf="@+id/textView12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/baseline_edit_black_48" />
+            app:srcCompat="@drawable/baseline_edit_black_48"
+            android:contentDescription="@string/main_op_edit" />
 
         <TextView
             android:id="@+id/textView12"
@@ -185,6 +189,7 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/objpts_btnlay_edit">
 
@@ -195,7 +200,8 @@
             app:layout_constraintEnd_toStartOf="@+id/textView13"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/baseline_delete_black_36dp" />
+            app:srcCompat="@drawable/baseline_delete_black_36dp"
+            android:contentDescription="@string/main_op_delete" />
 
         <TextView
             android:id="@+id/textView13"
