--- a/app/src/main/res/layout/fragment_query_item.xml
+++ b/app/src/main/res/layout/fragment_query_item.xml
@@ -21,7 +21,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:contentDescription="@string/main_obj_thumbnail" />
 
     <ImageButton
         android:id="@+id/query_item_del"
@@ -30,7 +31,8 @@
         android:background="@drawable/toast_frame_v28"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_close_black_24dp" />
+        app:srcCompat="@drawable/baseline_close_black_24dp"
+        android:contentDescription="@string/query_item_remove" />
 
     <!--<View-->
     <!--android:id="@+id/divider2"-->
