--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/main_menu_editip"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="Change IP"
+        android:icon="@drawable/baseline_edit_black_48"
+        android:title="@string/main_menu_change"
         app:showAsAction="ifRoom" />
 </menu>
