--- a/app/src/main/res/drawable-v26/mvc_icon_round.xml
+++ b/app/src/main/res/drawable-v26/mvc_icon_round.xml
@@ -1,4 +1,4 @@
 <adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
-    <background android:drawable="@drawable/mvc_icon_background"/>
+    <background android:drawable="@android:color/white"/>
     <foreground android:drawable="@drawable/mvc_icon_foreground"/>
 </adaptive-icon>
