--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
                 android:gravity="center"
                 android:text="@string/app_name_ex"
                 android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
-                android:theme="@style/AppTheme.Dark"
+                android:theme="@style/AppThemeDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
