--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -29,9 +29,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
+                android:hint="@string/edit_title"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="true"
-                android:text="@string/edit_title"
                 android:theme="@style/AppThemeDark" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
