--- a/app/src/main/res/layout/fragment_query_thumb.xml
+++ b/app/src/main/res/layout/fragment_query_thumb.xml
@@ -47,6 +47,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/edit_query_title"
             app:layout_constraintEnd_toStartOf="@+id/edit_query_iw4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_query_iw1"
