--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:focusable="true"
+        android:onClick="onClickAdd"
         android:visibility="visible"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
