--- a/app/src/main/res/menu/mark.xml
+++ b/app/src/main/res/menu/mark.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/mark_menu_delete"
         android:icon="@drawable/ic_baseline_delete"
         android:title="@string/delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom">
+        <menu />
+    </item>
     <item
         android:id="@+id/mark_menu_add"
         android:icon="@drawable/baseline_add_white_48"
